<resources>
    <string name="app_name">hourglass</string>
    <string name="id">ID</string>
    <string name="password">PW</string>
    <string name="welcome">Welcome!</string>
    <string name="login">LOGIN</string>
    <string name="login_session">로그인 상태 유지</string>
    <string name="pwFind">비밀번호 찾기</string>
    <string name="or">|</string>
    <string name="registerTv">회원가입</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="registerTextView">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="pwRegisterEtv">비밀번호</string>
    <string name="pwCheckEtv">비밀번호 확인</string>
    <string name="registerButton">가입하기</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
